修改命令文件,支持Jboot启动